<resources>
    <string name="app_name">Counters</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>

    <string name="label">Label:</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Counters</string>

    <string name="placeholderName">Not connected</string>
    <string name="placeholderMail" translatable="false">localhost</string>

    <string name="AuthFail">Authentication failed!</string>
    <string name="FirebaseAuthFail">Firebase authentication failed!</string>
    <string name="GAPIFatal">Fatal error in Google APIs</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4482071916806834/4264961880</string>
    <string name="cown">My own</string>
    <string name="cshared">Shared with me</string>
    <string name="account">Account</string>
    <string name="multiVal">Use dual counter?</string>
    <string name="create">Create new counter:</string>
    <string name="createConfirm">Create</string>
    <string name="labelHint">Counter name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="updateConfirm">Save</string>
    <string name="deleteConfirm">Delete</string>
    <string name="direction_up">up</string>
    <string name="direction_down">down</string>
    <string name="direction_label">Scrolling direction:</string>
</resources>
