<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:gravity="center"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        android:textColor="@color/text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/label"
        android:gravity="center"
        android:textColor="@color/text"/>

    <EditText
        android:id="@+id/ilabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/labelHint"
        android:inputType="text"
        android:gravity="center"
        android:textColor="@color/text"/>

    <Switch
        android:id="@+id/mVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/multiVal"
        android:gravity="center"
        android:textColor="@color/text"/>

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <include layout="@layout/list_item"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

    </FrameLayout>

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/createConfirm"
        android:textColor="@color/text"/>

</LinearLayout>